--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "material-tailwind-dashboard-react",
   "version": "1.1.0",
   "private": true,
-  "homepage": "https://demos.creative-tim.com/material-tailwind-dashboard-react/#/",
+  "homepage": ".",
   "dependencies": {
     "@material-tailwind/react": "^0.3.4",
     "@nivo/bar": "^0.73.1",
