--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nivo": "^0.31.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-moment-countdown": "^0.4.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
