--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-moment-countdown": "^0.4.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-twitter-embed": "^3.0.3",
     "use-interval": "^1.3.0",
     "web-vitals": "^1.0.1"
   },
