--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@nivo/bar": "^0.73.1",
     "@nivo/core": "^0.73.0",
     "@nivo/line": "^0.73.0",
+    "@nivo/pie": "^0.79.1",
     "@react-google-maps/api": "^2.1.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
